--- a/Project 02/ME-480 - Project 02 - notebook part A.ipynb
+++ b/Project 02/ME-480 - Project 02 - notebook part A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,26 +20,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "356953\n"
+     ]
+    }
+   ],
    "source": [
-    "cap = cv2.VideoCapture(\"data/CellA_noDoxycycline.avi\")\n",
+    "cap = cv2.VideoCapture(\"CellA_noDoxycycline.avi\")\n",
     "\n",
     "# Get properties of the video\n",
     "frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
     "frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "fps = cap.get(cv2.CAP_PROP_FPS)"
+    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "length = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "print(length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "processed_movie = []\n",
-    "\n",
+    "ret = True\n",
     "while ret:\n",
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
@@ -64,17 +74,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21438, 256, 128, 3)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "cap.release()\n",
     "processed_movie = np.array(processed_movie)\n",
-    "processed_movie.shape"
+    "processed_movie.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +112,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "play_video(processed_movie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = cv2.VideoWriter('output.avi', cv2.VideoWriter_fourcc(*\"MJPG\"), fps, (frame_width,frame_height))\n",
+    "\n",
+    "for i in processed_movie:\n",
+    "\n",
+    "    out.write(i)\n",
+    "\n",
+    "out.release()\n"
    ]
   }
  ],
@@ -114,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
